--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_PieChart.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_PieChart.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-<canvas id="@Model.PieChartId" width="300" height="300"></canvas>
+<canvas id="@Model.PieChartId"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
     var xValues = @Html.Raw(Model.XValues);
