--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
@@ -22,11 +22,11 @@
     int count = 0;
     foreach (var item in Model.GymDashboardModel.TransactionOverviewList)
     {
-        XValuesBarFinancialOverview[count] = Convert.ToString(item.TransactionDate);
-        YValuesBarFinancialOverview[count] = item.BillAmount;
+        XValuesBarFinancialOverview[count] = Convert.ToString(item.TransactionDate.ToCoditechDateFormat());
+        YValuesBarFinancialOverview[count] = Convert.ToInt32(item.BillAmount);
         count++;
     }
- 
+
     BarChartViewModel transactionOverviewModel = new BarChartViewModel()
             {
                 BarChartId = "TransactionOverviewChart",
@@ -34,7 +34,6 @@
                 YValues = JsonConvert.SerializeObject(YValuesBarFinancialOverview),
                 XAxisLabel = "Transaction Date",
                 YAxisLabel = "Total Amount",
-                Title = "Transaction Overview",
                 BackgroundColor = JsonConvert.SerializeObject(backgroundColor),
             };
 }
@@ -129,7 +128,7 @@
                         <div class="row d-flex justify-content-center">
                             <div class="col">
                                 <p class="text-dark mb-0 fw-semibold">Total Leads</p>
-                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.ToadysTotalCollection)</h3>
+                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.GymDashboardModel.TotalLeads)</h3>
                                 <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
                             </div>
                             <div class="col-auto align-self-center">
