--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_BarChart.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Charts/_BarChart.cshtml
@@ -2,12 +2,11 @@
 @{
     Layout = null;
 }
-<canvas id="@Model.BarChartId" style="width:100%;max-width:600px"></canvas>
+<canvas id="@Model.BarChartId"></canvas>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script>
-
-    var xValues = @Html.Raw(Json.Serialize(Model.XValues));
-    var yValues = @Html.Raw(Json.Serialize(Model.YValues));
+    var xValues = @Html.Raw(@Model.XValues);
+    var yValues = @Html.Raw(Model.YValues);
     new Chart("@Model.BarChartId", {
         type: "bar",
         data: {
