--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="/GymMemberDetails/GetGymMemberMembershipPlan?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
                     <i class="fas fa-id-card-alt"></i><h5 class="m-0 ps-2">Membership Plan</h5>
                 </a>
-                <a class="nav-link" href="/GymMemberDetails/MemberPaymentHistoryList?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/MemberPaymentHistoryList?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
                     <i class="fas fa-history"></i><h5 class="m-0 ps-2">Payment History</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/CreateEditGymMemberAddress?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
