GMSD-7:GYM -The search bar does not function when using the Enter or Tab keys, only works when clicking the search icon.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
@@ -8,8 +8,8 @@
     <div id="datatable_filter" class="dataTables_filter">
         <label>
             Search:
-            <input id="DataTables_SearchById" type="text" class="form-control form-control-sm" value="@Model">
-            <a onclick="CoditechDataTable.LoadList('@controllerName','@actionName')"><i class="fas fa-search" title="Search"></i></a>
+            <input id="DataTables_SearchById" type="text" onkeyup="CoditechCommon.SearchDatatableData()" class="form-control form-control-sm" value="@Model">
+            <a id="DataTables_SearchButton" onclick="CoditechDataTable.LoadList('@controllerName','@actionName')"><i class="fas fa-search" title="Search"></i></a>
             @if (!string.IsNullOrEmpty(@Model))
             {
                 <a onclick="CoditechDataTable.ReloadLoadList('@controllerName','@actionName')"><i class="fas fa-times" title="Clear"></i></a>
