--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
     <!-- end page-wrapper -->
     <footer class="footer text-center text-sm-start">
         <div class="boxed-footer">
-            Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Software Pvt. Ltd</a>
+            Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Innovations Pvt. Ltd</a>
             @*<span class="text-muted d-none d-sm-inline-block float-end">Crafted with <i class="mdi mdi-heart text-danger"></i> by Mannatthemes</span>*@
         </div>
     </footer>
