--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_LayoutLogin.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_LayoutLogin.cshtml
@@ -50,7 +50,7 @@
                             <!-- end page content -->
                             <div class="card-body bg-light-alt text-center auth-footer">
                                 <span class="text-muted d-none d-sm-inline-block">
-                                    Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Software Pvt. Ltd</a>
+                                    Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Innovations Pvt. Ltd</a>
                                 </span>
                             </div>
                         </div>
