--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -16,7 +16,7 @@
                 <a class="nav-link" href="/GymMemberDetails/MemberOtherDetails?gymMemberDetailId=@gymMemberDetailId" aria-selected="true">
                     <i class="fas fa-info-circle"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
-                <a class="nav-link" href="/GymMemberDetails/GetGymMemberMembershipPlan?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/GetGymMemberMembershipPlan?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
                     <i class="fas fa-id-card-alt"></i><h5 class="m-0 ps-2">Membership Plan</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberPaymentHistoryList?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
