GMSD-2:GYM- Module Sorting Issue for Staff Assigned Modules

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Gym/GymOwnerDashboard.cshtml
@@ -441,13 +441,13 @@
                                                                             @if (item.Type == "DateOfBirth")
                                                                             {
                                                                                 <text>
-                                                                                    Happy Birthday @item.FirstName @item.LastName! Wishing you a joyful day and a wonderful year ahead!
+                                                                                    <span style="font-weight:bold">Happy Birthday @item.FirstName @item.LastName</span> Wishing you a joyful day and a wonderful year ahead!
                                                                                 </text>
                                                                             }
                                                                             else if (item.Type == "MarriageAnniversary")
                                                                             {
                                                                                 <text>
-                                                                                    Happy Marriage Anniversary @item.FirstName @item.LastName! Cheers to your beautiful journey together!
+                                                                                    <span style="font-weight:bold">Happy Marriage Anniversary @item.FirstName @item.LastName</span> <br /> Cheers to your beautiful journey together!
                                                                                 </text>
                                                                             }
                                                                         </span>
