--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -7,7 +7,7 @@
     string actionName = Convert.ToString(ViewContext.RouteData.Values["action"]).ToLower();
     UserMainMenuModel userMenuModel = Model?.MenuList?.FirstOrDefault(x => x.ControllerName == controllerName);
     List<UserMainMenuModel> menuList = userMenuModel != null ? Model?.MenuList?.Where(x => x.ModuleCode == userMenuModel.ModuleCode)?.ToList() : null;
-    UserModuleModel userModuleModel = userMenuModel != null ? Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode): new UserModuleModel();
+    UserModuleModel userModuleModel = userMenuModel != null ? Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode) : new UserModuleModel();
 }
 
 <li class="has-submenu">
@@ -18,7 +18,7 @@
         </span>
     </a>
     <ul class="submenu">
-        @foreach (UserModuleModel item in Model?.ModuleList)
+        @foreach (UserModuleModel item in Model?.ModuleList?.OrderBy(x => x.ModuleSeqNumber))
         {
             <li>
                 <a href="/@item.DefaultMenuLink">
