--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
@@ -69,7 +69,7 @@
 								@item.PaymentReceivedBy
 							</td>
 							<td class="text-center data-action">
-								<a href="../@controllerName/GetSalesInvoiceDetails?salesInvoiceMasterId=@item.SalesInvoiceMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-print"></i></a>
+								<a href="../@controllerName/GetSalesInvoiceDetails?salesInvoiceMasterId=@item.SalesInvoiceMasterId" title="Print" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-print"></i></a>
 							</td>
 						</tr>
 					}
