--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/gymmemberdetails/GetBodyMeasurementTypeListByMemberId?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
                     <i class="fas fa-ruler"></i><h5 class="m-0 ps-2">Body Measurement</h5>
                 </a>
-                <a class="nav-link" href="/GymMemberDetails/MemberFollowUpList?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/MemberFollowUpList?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
                     <i class="fas fa-handshake"></i><h5 class="m-0 ps-2">Follow-up</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberAttendanceDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
