GMSD-69:GYM- "No Result found" displayed message on some pages is not in proper format of uppercase or lowercase letters.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
@@ -69,7 +69,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <tr><td>No Result found</td></tr>
+                                                            <tr><td>No Result Found</td></tr>
                                                         }
                                                     </tbody>
                                                 </table>
