--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/Reports/SaleInvoiceReport.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/Reports/SaleInvoiceReport.cshtml
@@ -60,7 +60,7 @@
                         {
                             <div class="row">
                                 <div class="col-sm-12 col-md-5">
-                                    <span>No Result found</span>
+                                    <span>No Result Found</span>
                                 </div>
                             </div>
                         }
