--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
@@ -44,7 +44,7 @@
     else
     {
         <div class="col-sm-12 col-md-5">
-            <span>No Result found</span>
+            <span>No Result Found</span>
         </div>
     }
 </div>
