GMSD-64: GYM - Sorting Fails and Shows "No Result Found" in Attendance Details

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -19,7 +19,7 @@
                     {
                         <tr>
                             <td> @item.MembershipPlanName</td>
-                            <td>@item.PlanType</td>
+                            <td>@item.PlanTypeEnumId</td>
                             <td>
                                 @{
                                     string membershipplanPeriodInfo = "";
