--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="/GymMemberDetails/MemberFollowUpList?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
                     <i class="fas fa-handshake"></i><h5 class="m-0 ps-2">Follow-up</h5>
                 </a>
-                <a class="nav-link" href="/GymMemberDetails/MemberAttendanceDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/MemberAttendanceDetails?SelectedParameter1=@gymMemberDetailId&SelectedParameter2=@personId" aria-selected="true">
                     <i class="fas fa-calendar-check"></i><h5 class="m-0 ps-2">Attendance Details</h5>
                 </a>
              
