--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
@@ -6,7 +6,7 @@
 
     if (Model?.GeneralPersonAttendanceDetailsList != null)
     {
-        Model.GeneralPersonAttendanceDetailsList = Model.GeneralPersonAttendanceDetailsList.OrderByDescending(x => x.AttendanceDate).ToList();
+        Model.GeneralPersonAttendanceDetailsList = Model.GeneralPersonAttendanceDetailsList.ToList();
     }
 }
 <div class="row">
@@ -17,6 +17,9 @@
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            @Html.HiddenFor(x => x.SelectedParameter1)
+            @Html.HiddenFor(x => x.SelectedParameter2)
+
             <tbody>
                 @if (Model?.GeneralPersonAttendanceDetailsList?.Count > 0)
                 {
@@ -41,8 +44,8 @@
                             </td>
                             <td style="max-width: 200px; overflow: hidden; text-overflow: ellipsis;" title="@item.Remark">@item.Remark</td>
                             @* <td class="text-center"> *@
-                                @* <a data-bs-toggle="modal" data-bs-target="#AddUpdateAttendanceModelPopupId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberAttendance('AddUpdateAttendanceModelPopupContentId','@Model.GymMemberDetailId','@Model.PersonId')" title="Update Attendance" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas fa-edit"></i></a> *@
-                                @* <a href="../@controllerName/DeleteGymMemberAttendance?gymMemberAttendanceIdIds=@item.&gymMemberDetailId=@Model.GymMemberDetailId&personId=@Model.PersonId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
+                            @* <a data-bs-toggle="modal" data-bs-target="#AddUpdateAttendanceModelPopupId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberAttendance('AddUpdateAttendanceModelPopupContentId','@Model.GymMemberDetailId','@Model.PersonId')" title="Update Attendance" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas fa-edit"></i></a> *@
+                            @* <a href="../@controllerName/DeleteGymMemberAttendance?gymMemberAttendanceIdIds=@item.&gymMemberDetailId=@Model.GymMemberDetailId&personId=@Model.PersonId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             @* </td> *@
                         </tr>
                     }
