--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -12,13 +12,15 @@
 <div class="row">
     <div class="col-lg-3">
         <div class="mb-3">
-            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label" })
+            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label required" })
             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
        {
            DropdownSelectedValue = Model.PersonTitle ?? string.Empty,
            DropdownName = "PersonTitle",
            GroupCode = DropdownTypeEnum.Title.ToString(),
-           IsTextValueSame = true
+           IsTextValueSame = true,
+           IsRequired = true,
+           IsStringProperty = true
        })
             @Html.ValidationMessageFor(x => x.PersonTitle)
         </div>
